update sealedserver to eventserver

--- a/demo/web/chat.html
+++ b/demo/web/chat.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta name="keywords" content="CComet, ajax server push, long-polling, Comet server, chat" />
-		<meta name="description" content="CComet is A tiny Comet Based on SealedServer" />
+		<meta name="description" content="CComet is A tiny Comet Based on EventServer" />
 
 		<title>CComet Example Chat</title>
 		<link rel='stylesheet' href='chat.css' type='text/css' media='all' />
